import("//build_overrides/llvm.gni")

import("//${llvm_root}llvm/lib/Target/targets.gni")
import("//${llvm_build_root}build/toolchain/compiler.gni")

supported_toolchains = [ "//${llvm_build_root}build/toolchain:stage2_unix" ] +
                       supported_android_toolchains

group("libunwind") {
  deps = []
  foreach(toolchain, supported_toolchains) {
    deps += [ "//${llvm_root}libunwind/src($toolchain)" ]
  }
}
