import("//build_overrides/llvm.gni")

static_library("clang-doc") {
  output_name = "clangDoc"
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//${llvm_root}clang/lib/AST",
    "//${llvm_root}clang/lib/ASTMatchers",
    "//${llvm_root}clang/lib/Analysis",
    "//${llvm_root}clang/lib/Basic",
    "//${llvm_root}clang/lib/Frontend",
    "//${llvm_root}clang/lib/Index",
    "//${llvm_root}clang/lib/Lex",
    "//${llvm_root}clang/lib/Tooling",
    "//${llvm_root}clang/lib/Tooling/Core",
    "//${llvm_root}llvm/lib/Bitcode/Reader",
    "//${llvm_root}llvm/lib/Bitcode/Writer",
    "//${llvm_root}llvm/lib/Support",
  ]
  sources = [
    "BitcodeReader.cpp",
    "BitcodeWriter.cpp",
    "ClangDoc.cpp",
    "Generators.cpp",
    "HTMLGenerator.cpp",
    "MDGenerator.cpp",
    "Mapper.cpp",
    "Representation.cpp",
    "Serialize.cpp",
    "YAMLGenerator.cpp",
  ]
}
