import("//build_overrides/llvm.gni")

static_library("clang-include-fixer") {
  output_name = "clangIncludeFixer"
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//${llvm_root}clang-tools-extra/clang-include-fixer/find-all-symbols",
    "//${llvm_root}clang/lib/AST",
    "//${llvm_root}clang/lib/Basic",
    "//${llvm_root}clang/lib/Format",
    "//${llvm_root}clang/lib/Frontend",
    "//${llvm_root}clang/lib/Lex",
    "//${llvm_root}clang/lib/Parse",
    "//${llvm_root}clang/lib/Sema",
    "//${llvm_root}clang/lib/Serialization",
    "//${llvm_root}clang/lib/Tooling",
    "//${llvm_root}clang/lib/Tooling/Core",
    "//${llvm_root}llvm/lib/Support",
  ]
  sources = [
    "FuzzySymbolIndex.cpp",
    "InMemorySymbolIndex.cpp",
    "IncludeFixer.cpp",
    "IncludeFixerContext.cpp",
    "SymbolIndexManager.cpp",
    "YamlSymbolIndex.cpp",
  ]
}
