import("//build_overrides/llvm.gni")

static_library("clang-move") {
  output_name = "clangMove"
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//${llvm_root}clang/lib/AST",
    "//${llvm_root}clang/lib/ASTMatchers",
    "//${llvm_root}clang/lib/Analysis",
    "//${llvm_root}clang/lib/Basic",
    "//${llvm_root}clang/lib/Format",
    "//${llvm_root}clang/lib/Frontend",
    "//${llvm_root}clang/lib/Lex",
    "//${llvm_root}clang/lib/Serialization",
    "//${llvm_root}clang/lib/Tooling",
    "//${llvm_root}clang/lib/Tooling/Core",
    "//${llvm_root}llvm/lib/Support",
  ]
  sources = [
    "HelperDeclRefGraph.cpp",
    "Move.cpp",
  ]
}
