import("//build_overrides/llvm.gni")

static_library("clang-query") {
  output_name = "clangQuery"
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//clang/lib/AST",
    "//clang/lib/ASTMatchers",
    "//clang/lib/ASTMatchers/Dynamic",
    "//clang/lib/Basic",
    "//clang/lib/Frontend",
    "//clang/lib/Serialization",
    "//llvm/lib/LineEditor",
    "//llvm/lib/Support",
  ]
  sources = [
    "Query.cpp",
    "QueryParser.cpp",
  ]
}
