import("//build_overrides/llvm.gni")

static_library("clang-query") {
  output_name = "clangQuery"
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//${llvm_root}clang/lib/AST",
    "//${llvm_root}clang/lib/ASTMatchers",
    "//${llvm_root}clang/lib/ASTMatchers/Dynamic",
    "//${llvm_root}clang/lib/Basic",
    "//${llvm_root}clang/lib/Frontend",
    "//${llvm_root}clang/lib/Serialization",
    "//${llvm_root}llvm/lib/LineEditor",
    "//${llvm_root}llvm/lib/Support",
  ]
  sources = [
    "Query.cpp",
    "QueryParser.cpp",
  ]
}
