import("//build_overrides/llvm.gni")

static_library("clang-reorder-fields") {
  output_name = "clangReorderFields"
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//clang/lib/AST",
    "//clang/lib/ASTMatchers",
    "//clang/lib/Basic",
    "//clang/lib/Index",
    "//clang/lib/Lex",
    "//clang/lib/Serialization",
    "//clang/lib/Tooling/Core",
    "//llvm/lib/Support",
  ]
  sources = [ "ReorderFieldsAction.cpp" ]
}
