import("//build_overrides/llvm.gni")

static_library("clang-reorder-fields") {
  output_name = "clangReorderFields"
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//${llvm_root}clang/lib/AST",
    "//${llvm_root}clang/lib/ASTMatchers",
    "//${llvm_root}clang/lib/Basic",
    "//${llvm_root}clang/lib/Index",
    "//${llvm_root}clang/lib/Lex",
    "//${llvm_root}clang/lib/Serialization",
    "//${llvm_root}clang/lib/Tooling/Core",
    "//${llvm_root}llvm/lib/Support",
  ]
  sources = [ "ReorderFieldsAction.cpp" ]
}
