import("//build_overrides/llvm.gni")

executable("modularize") {
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//${llvm_root}clang/lib/AST",
    "//${llvm_root}clang/lib/Basic",
    "//${llvm_root}clang/lib/Driver",
    "//${llvm_root}clang/lib/Frontend",
    "//${llvm_root}clang/lib/Lex",
    "//${llvm_root}clang/lib/Serialization",
    "//${llvm_root}clang/lib/Tooling",
    "//${llvm_root}llvm/lib/Option",
    "//${llvm_root}llvm/lib/Support",
    "//${llvm_root}llvm/lib/TargetParser",
  ]
  sources = [
    "CoverageChecker.cpp",
    "Modularize.cpp",
    "ModularizeUtilities.cpp",
    "ModuleAssistant.cpp",
    "PreprocessorTracker.cpp",
  ]
}
