import("//build_overrides/llvm.gni")

executable("pp-trace") {
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//${llvm_root}clang/lib/AST",
    "//${llvm_root}clang/lib/Basic",
    "//${llvm_root}clang/lib/Frontend",
    "//${llvm_root}clang/lib/Lex",
    "//${llvm_root}clang/lib/Serialization",
    "//${llvm_root}clang/lib/Tooling",
    "//${llvm_root}llvm/lib/Support",
  ]
  sources = [
    "PPCallbacksTracker.cpp",
    "PPTrace.cpp",
  ]
}
