import("//build_overrides/llvm.gni")

import("//${llvm_root}llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":COFF" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("COFF") {
  output_name = "lldCOFF"
  configs += [ "//${llvm_build_root}build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_root}lld/Common",
    "//${llvm_root}llvm/lib/BinaryFormat",
    "//${llvm_root}llvm/lib/DebugInfo/CodeView",
    "//${llvm_root}llvm/lib/DebugInfo/MSF",
    "//${llvm_root}llvm/lib/DebugInfo/PDB",
    "//${llvm_root}llvm/lib/IR",
    "//${llvm_root}llvm/lib/LTO",
    "//${llvm_root}llvm/lib/MC",
    "//${llvm_root}llvm/lib/Object",
    "//${llvm_root}llvm/lib/Option",
    "//${llvm_root}llvm/lib/Support",
    "//${llvm_root}llvm/lib/Target:TargetsToBuild",
    "//${llvm_root}llvm/lib/TargetParser",
    "//${llvm_root}llvm/lib/ToolDrivers/llvm-lib:LibDriver",
    "//${llvm_root}llvm/lib/WindowsDriver",
    "//${llvm_root}llvm/lib/WindowsManifest",
  ]
  sources = [
    "COFFLinkerContext.cpp",
    "CallGraphSort.cpp",
    "Chunks.cpp",
    "DLL.cpp",
    "DebugTypes.cpp",
    "Driver.cpp",
    "DriverUtils.cpp",
    "ICF.cpp",
    "InputFiles.cpp",
    "LLDMapFile.cpp",
    "LTO.cpp",
    "MapFile.cpp",
    "MarkLive.cpp",
    "MinGW.cpp",
    "PDB.cpp",
    "SymbolTable.cpp",
    "Symbols.cpp",
    "Writer.cpp",
  ]
}
