import("//build_overrides/llvm.gni")

import("//${llvm_root}llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":ELF" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("ELF") {
  output_name = "lldELF"
  configs += [ "//${llvm_build_root}build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_root}lld/Common",
    "//${llvm_root}llvm/lib/BinaryFormat",
    "//${llvm_root}llvm/lib/DebugInfo/DWARF",
    "//${llvm_root}llvm/lib/IR",
    "//${llvm_root}llvm/lib/LTO",
    "//${llvm_root}llvm/lib/MC",
    "//${llvm_root}llvm/lib/Object",
    "//${llvm_root}llvm/lib/Option",
    "//${llvm_root}llvm/lib/Support",
    "//${llvm_root}llvm/lib/Target:TargetsToBuild",
    "//${llvm_root}llvm/lib/TargetParser",
  ]
  include_dirs = [ "." ]
  sources = [
    "AArch64ErrataFix.cpp",
    "ARMErrataFix.cpp",
    "Arch/AArch64.cpp",
    "Arch/AMDGPU.cpp",
    "Arch/ARM.cpp",
    "Arch/AVR.cpp",
    "Arch/Hexagon.cpp",
    "Arch/MSP430.cpp",
    "Arch/Mips.cpp",
    "Arch/MipsArchTree.cpp",
    "Arch/PPC.cpp",
    "Arch/PPC64.cpp",
    "Arch/RISCV.cpp",
    "Arch/SPARCV9.cpp",
    "Arch/X86.cpp",
    "Arch/X86_64.cpp",
    "CallGraphSort.cpp",
    "DWARF.cpp",
    "Driver.cpp",
    "DriverUtils.cpp",
    "EhFrame.cpp",
    "ICF.cpp",
    "InputFiles.cpp",
    "InputSection.cpp",
    "LTO.cpp",
    "LinkerScript.cpp",
    "MapFile.cpp",
    "MarkLive.cpp",
    "OutputSections.cpp",
    "Relocations.cpp",
    "ScriptLexer.cpp",
    "ScriptParser.cpp",
    "SymbolTable.cpp",
    "Symbols.cpp",
    "SyntheticSections.cpp",
    "Target.cpp",
    "Thunks.cpp",
    "Writer.cpp",
  ]
}
