import("//build_overrides/llvm.gni")

import("//${llvm_root}llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":MachO" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("MachO") {
  output_name = "lldMachO"
  configs += [ "//${llvm_build_root}build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_root}lld/Common",
    "//${llvm_root}llvm/lib/BinaryFormat",
    "//${llvm_root}llvm/lib/Object",
    "//${llvm_root}llvm/lib/Option",
    "//${llvm_root}llvm/lib/Support",
    "//${llvm_root}llvm/lib/Target:TargetsToBuild",
    "//${llvm_root}llvm/lib/TargetParser",
  ]
  include_dirs = [
    ".",
    "//${llvm_root}libunwind/include",
  ]
  sources = [
    "Arch/ARM64.cpp",
    "Arch/ARM64Common.cpp",
    "Arch/ARM64_32.cpp",
    "Arch/X86_64.cpp",
    "ConcatOutputSection.cpp",
    "Driver.cpp",
    "DriverUtils.cpp",
    "Dwarf.cpp",
    "EhFrame.cpp",
    "ExportTrie.cpp",
    "ICF.cpp",
    "InputFiles.cpp",
    "InputSection.cpp",
    "LTO.cpp",
    "MapFile.cpp",
    "MarkLive.cpp",
    "ObjC.cpp",
    "OutputSection.cpp",
    "OutputSegment.cpp",
    "Relocations.cpp",
    "SectionPriorities.cpp",
    "SymbolTable.cpp",
    "Symbols.cpp",
    "SyntheticSections.cpp",
    "Target.cpp",
    "UnwindInfoSection.cpp",
    "Writer.cpp",
  ]
}
