import("//build_overrides/llvm.gni")

import("//${llvm_root}llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":MinGW" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("MinGW") {
  output_name = "lldMinGW"
  configs += [ "//${llvm_build_root}build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_root}lld/COFF",
    "//${llvm_root}lld/Common",
    "//${llvm_root}llvm/lib/Option",
    "//${llvm_root}llvm/lib/Support",
    "//${llvm_root}llvm/lib/TargetParser",
  ]
  sources = [ "Driver.cpp" ]
}
