import("//build_overrides/llvm.gni")

import("//${llvm_root}llvm/utils/TableGen/tablegen.gni")

tablegen("Options") {
  visibility = [ ":wasm" ]
  args = [ "-gen-opt-parser-defs" ]
}

static_library("wasm") {
  output_name = "lldWasm"
  configs += [ "//${llvm_build_root}build:lld_code" ]
  deps = [
    ":Options",
    "//${llvm_root}lld/Common",
    "//${llvm_root}llvm/lib/BinaryFormat",
    "//${llvm_root}llvm/lib/Demangle",
    "//${llvm_root}llvm/lib/IR",
    "//${llvm_root}llvm/lib/Object",
    "//${llvm_root}llvm/lib/Option",
    "//${llvm_root}llvm/lib/TargetParser",
  ]
  sources = [
    "Driver.cpp",
    "InputChunks.cpp",
    "InputFiles.cpp",
    "LTO.cpp",
    "MapFile.cpp",
    "MarkLive.cpp",
    "OutputSections.cpp",
    "OutputSegment.cpp",
    "Relocations.cpp",
    "SymbolTable.cpp",
    "Symbols.cpp",
    "SyntheticSections.cpp",
    "Writer.cpp",
    "WriterUtils.cpp",
  ]
}
