import("//build_overrides/llvm.gni")

lldb_lit_site_cfg_file = "$root_gen_dir/${llvm_root}/lldb/test/lit.site.cfg.py"
lldb_lit_api_site_cfg_file = "$root_gen_dir/${llvm_root}/lldb/test/API/lit.site.cfg.py"
lldb_lit_shell_site_cfg_file = "$root_gen_dir/${llvm_root}/lldb/test/Shell/lit.site.cfg.py"
lldb_lit_unit_site_cfg_file = "$root_gen_dir/${llvm_root}/lldb/test/Unit/lit.site.cfg.py"
