import("//build_overrides/llvm.gni")

static_library("Core") {
  output_name = "LLVMBOLTCore"
  configs += [ "//${llvm_build_root}build:bolt_code" ]
  deps = [
    "//bolt/lib/Utils",
    "//llvm/lib/BinaryFormat",
    "//llvm/lib/CodeGen/AsmPrinter",
    "//llvm/lib/DebugInfo/DWARF",
    "//llvm/lib/Demangle",
    "//llvm/lib/MC",
    "//llvm/lib/MC/MCDisassembler",
    "//llvm/lib/Object",
    "//llvm/lib/Support",
    "//llvm/lib/TargetParser",
    "//${llvm_build_root}build/libs/pthread",
  ]
  sources = [
    "BinaryBasicBlock.cpp",
    "BinaryContext.cpp",
    "BinaryData.cpp",
    "BinaryEmitter.cpp",
    "BinaryFunction.cpp",
    "BinaryFunctionProfile.cpp",
    "BinarySection.cpp",
    "DIEBuilder.cpp",
    "DebugData.cpp",
    "DynoStats.cpp",
    "Exceptions.cpp",
    "FunctionLayout.cpp",
    "HashUtilities.cpp",
    "JumpTable.cpp",
    "MCPlusBuilder.cpp",
    "ParallelUtilities.cpp",
    "Relocation.cpp",
  ]
}
