import("//build_overrides/llvm.gni")

static_library("Core") {
  output_name = "LLVMBOLTCore"
  configs += [ "//${llvm_build_root}build:bolt_code" ]
  deps = [
    "//${llvm_root}bolt/lib/Utils",
    "//${llvm_root}llvm/lib/BinaryFormat",
    "//${llvm_root}llvm/lib/CodeGen/AsmPrinter",
    "//${llvm_root}llvm/lib/DebugInfo/DWARF",
    "//${llvm_root}llvm/lib/Demangle",
    "//${llvm_root}llvm/lib/MC",
    "//${llvm_root}llvm/lib/MC/MCDisassembler",
    "//${llvm_root}llvm/lib/Object",
    "//${llvm_root}llvm/lib/Support",
    "//${llvm_root}llvm/lib/TargetParser",
    "//${llvm_build_root}build/libs/pthread",
  ]
  sources = [
    "BinaryBasicBlock.cpp",
    "BinaryContext.cpp",
    "BinaryData.cpp",
    "BinaryEmitter.cpp",
    "BinaryFunction.cpp",
    "BinaryFunctionProfile.cpp",
    "BinarySection.cpp",
    "DIEBuilder.cpp",
    "DebugData.cpp",
    "DynoStats.cpp",
    "Exceptions.cpp",
    "FunctionLayout.cpp",
    "HashUtilities.cpp",
    "JumpTable.cpp",
    "MCPlusBuilder.cpp",
    "ParallelUtilities.cpp",
    "Relocation.cpp",
  ]
}
