import("//build_overrides/llvm.gni")

static_library("Profile") {
  output_name = "LLVMBOLTProfile"
  configs += [ "//${llvm_build_root}build:bolt_code" ]
  deps = [
    "//${llvm_root}bolt/lib/Core",
    "//${llvm_root}bolt/lib/Passes",
    "//${llvm_root}bolt/lib/Utils",
    "//${llvm_root}llvm/lib/Support",
  ]
  sources = [
    "BoltAddressTranslation.cpp",
    "DataAggregator.cpp",
    "DataReader.cpp",
    "Heatmap.cpp",
    "ProfileReaderBase.cpp",
    "StaleProfileMatching.cpp",
    "YAMLProfileReader.cpp",
    "YAMLProfileWriter.cpp",
  ]
}
