import("//build_overrides/llvm.gni")

static_library("RuntimeLibs") {
  output_name = "LLVMBOLTRuntimeLibs"
  configs += [ "//${llvm_build_root}build:bolt_code" ]
  deps = [
    "//${llvm_root}bolt/include/bolt/RuntimeLibs:RuntimeLibraryVariables",
    "//${llvm_root}bolt/lib/Core",
    "//${llvm_root}bolt/lib/Passes",
    "//${llvm_root}bolt/lib/Utils",
    "//${llvm_root}llvm/lib/BinaryFormat",
    "//${llvm_root}llvm/lib/ExecutionEngine/JITLink",
    "//${llvm_root}llvm/lib/MC",
    "//${llvm_root}llvm/lib/Object",
    "//${llvm_root}llvm/lib/Support",
  ]
  include_dirs = [ target_gen_dir ]
  sources = [
    "HugifyRuntimeLibrary.cpp",
    "InstrumentationRuntimeLibrary.cpp",
    "RuntimeLibrary.cpp",
  ]
}
