import("//build_overrides/llvm.gni")

executable("llvm-bolt-heatmap") {
  configs += [ "//${llvm_build_root}build:bolt_code" ]
  deps = [
    "//${llvm_root}bolt/lib/Profile",
    "//${llvm_root}bolt/lib/Rewrite",
    "//${llvm_root}bolt/lib/Utils",
    "//${llvm_root}llvm/lib/MC",
    "//${llvm_root}llvm/lib/Object",
    "//${llvm_root}llvm/lib/Support",
    "//${llvm_root}llvm/lib/Target:TargetsToBuild",
  ]
  sources = [ "heatmap.cpp" ]
}
