import("//build_overrides/llvm.gni")

executable("merge-fdata") {
  configs += [ "//${llvm_build_root}build:bolt_code" ]
  deps = [
    "//${llvm_root}llvm/include/llvm/IR:public_tablegen",
    "//${llvm_root}llvm/lib/Support",
  ]
  sources = [ "merge-fdata.cpp" ]

  # Emit relocations for BOLT meta test
  # (bolt/test/runtime/meta-merge-fdata.test)
  if (current_os == "linux") {
    ldflags = [ "-Wl,--emit-relocs" ]
  }
}
