import("//build_overrides/llvm.gni")

executable("clang-apply-replacements") {
  configs += [ "//${llvm_build_root}build:clang_code" ]
  deps = [
    "//${llvm_root}clang-tools-extra/clang-apply-replacements",
    "//${llvm_root}clang/lib/Basic",
    "//${llvm_root}clang/lib/Format",
    "//${llvm_root}clang/lib/Rewrite",
    "//${llvm_root}clang/lib/Tooling/Core",
    "//${llvm_root}clang/lib/Tooling/Refactoring",
    "//${llvm_root}llvm/lib/Support",
  ]
  include_dirs = [ "../include" ]
  sources = [ "ClangApplyReplacementsMain.cpp" ]
}
